main/default/objects/Answer_Sequence_Item__c/Answer_Sequence_Item__c.object-meta.xml
<CustomObject>
    <label>Answer Sequence Item</label>
    <nameField>
        <displayFormat>ASI-{0000000}</displayFormat>
        <label>Answer Sequence Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Sequence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>