main/default/objects/Answer_Sequence_Item__c/fields/Answer_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Answer_Sequence__c</fullName>
    <label>Answer Sequence</label>
    <referenceTo>Answer_Sequence__c</referenceTo>
    <relationshipLabel>Answer Sequence Items</relationshipLabel>
    <relationshipName>Answer_Sequence_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>