main/default/objects/Answer_Sequence_Item__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <label>Answer Text</label>
    <type>TextArea</type>
</CustomField>