main/default/objects/Answer_Sequence_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>