main/default/objects/Answer_Sequence_Item__c/validationRules/item_id_specia_chars_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>item_id_specia_chars_validation</fullName>
    <active>true</active>
    <description>Prevent special characters in item id</description>
    <errorConditionFormula>CONTAINS( Item_Id__c ,&quot;;&quot;)</errorConditionFormula>
    <errorDisplayField>Item_Id__c</errorDisplayField>
    <errorMessage>Item Id contains un-supported special characters, please update the item id</errorMessage>
</ValidationRule>